--- a/de/index.html
+++ b/de/index.html
@@ -360,15 +360,15 @@
             </div>
 
           </div>
-          <div class="col-md-6 d-flex align-items-stretch mt-4">
+          <!--<div class="col-md-6 d-flex align-items-stretch mt-4">
             <div class="card" style='background-image: url("../assets/img/wecare6.png");' data-aos="fade-up" data-aos-delay="100">
               <div class="card-body">
                 <h5 class="card-title"><a href="">We Care</a></h5>
                 <p class="card-text">Überwachen Sie Ihre Gesundheit und die Ihrer Liebsten mit Technologie und Know-how gemeinsam.</p>
-                <!-- <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div> -->
+                
               </div>
             </div>
-          </div>
+          </div>-->
           <div class="col-md-6 d-flex align-items-stretch mt-4">
             <div class="card" style='background-image: url("../assets/img/api.jpg");' data-aos="fade-up" data-aos-delay="200">
               <div class="card-body">
@@ -768,7 +768,22 @@
         </div>
 
         <div class="row">
-
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="200">
+              <div class="member-img">
+                <img src="../assets/img/team/FahimeAvatar.png" class="img-fluid" alt="">
+                <div class="social">
+                  <!--<a href="https://twitter.com/f_bakhshandegan"><i class="icofont-twitter"></i></a>-->
+                  <!-- <a href="https://www.linkedin.com/in/fbakhshandegan/"><i class="icofont-linkedin"></i></a> -->
+                  fahime@rekloud.de
+                </div>
+              </div>
+              <div class="member-info" itemscope itemtype="http://schema.org/Person">
+                <span itemprop="name"><h4>Fahime</h4></span>
+                <span itemprop="jobTitle">CTO</span>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
@@ -1010,7 +1025,7 @@
 
               <div>
                 <i class="ri-phone-line"></i>
-                <p>+49 176 41749036</p>
+                <p>+49 231 1347 9131</p>
               </div>
 
             </div>
