--- a/imprint.html
+++ b/imprint.html
@@ -108,7 +108,7 @@
   
   <p><strong>Vertreten durch:</strong></p>
   
-  <p>Dr. Mostafa A. Ardestani</p>
+  <p>Fahime Targoli</p>
   
   <p><strong>Kontakt</strong></p>
   
