--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
         </div>
         
         <div class="row">
-          <div class="col-md-6 d-flex align-items-stretch">
+         <div class="col-md-6 d-flex align-items-stretch">
             <div class="card" style='background-image: url("assets/img/hirec.png");' data-aos="fade-up" data-aos-delay="100">
               <div class="card-body">
                 <h5 class="card-title"><a href="">HiRec</a></h5>
                 <p class="card-text">Empower your business with our high performance recommendation engine called HiRec.</p>
-                <!-- <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div> -->
+                <div class="read-more"><a href=""><i class="icofont-arrow-right"></i>Read More</a></div>
               </div>
             </div>
           </div>
@@ -251,25 +251,25 @@
               <div class="card-body">
                 <h5 class="card-title"><a href="">Tinvois</a></h5>
                 <p class="card-text">Enhance your invoice management with Tinvois, an advanced AI enabled system.</p>
-                <div class="read-more"><a href="https://rekloud.com"><i class="icofont-arrow-right"></i> Read More</a></div>
+                <div class="read-more"><a href="https://tinvois.de/"><i class="icofont-arrow-right"></i> Read More</a></div>
               </div>
             </div>
 
           </div>
-          <div class="col-md-6 d-flex align-items-stretch mt-4">
+         <!-- <div class="col-md-6 d-flex align-items-stretch mt-4">
             <div class="card" style='background-image: url("assets/img/wecare6.png");' data-aos="fade-up" data-aos-delay="100">
               <div class="card-body">
-                <h5 class="card-title"><a href="">We Care</a></h5>
+                <<h5 class="card-title"><a href="">We Care</a></h5>
                 <p class="card-text">Monitor your and your beloved ones health with technology and expertise together</p>
-                <!-- <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div> -->
               </div>
             </div>
-          </div>
-          <div class="col-md-6 d-flex align-items-stretch mt-4">
-            <div class="card" style='background-image: url("assets/img/api.jpg");' data-aos="fade-up" data-aos-delay="200">
+          </div>  -->
+          <div class="col-md-12 d-flex align-items-stretch mt-4">
+            <div class="card" style='background-image: url("assets/img/api.jpg"); background-size: contain;' data-aos="fade-up" data-aos-delay="200">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Invoice Parsing API</a></h5>
                 <p class="card-text">Extracte structured inforamtion from invoice images with advanced Deep Learning models.</p>
+                <div class="read-more"><a href=""><i class="icofont-arrow-right"></i>Read More</a></div>
                 <!-- <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div> -->
               </div>
             </div>
@@ -664,6 +664,21 @@
         </div>
 
         <div class="row">
+          
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="200">
+              <div class="member-img">
+                <img src="assets/img/team/FahimeAvatar.png" class="img-fluid" alt="">
+                <div class="social">
+                  fahime@rekloud.de
+                </div>
+              </div>
+              <div class="member-info" itemscope itemtype="http://schema.org/Person">
+                <span itemprop="name"><h4>Fahime</h4></span>
+                <span itemprop="jobTitle">CEO</span>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
@@ -906,7 +921,7 @@
 
               <div>
                 <i class="ri-phone-line"></i>
-                <p>+49 176 41749036</p>
+                <p>+49 231 1347 9131</p>
               </div>
 
             </div>
