--- a/de/index.html
+++ b/de/index.html
@@ -369,8 +369,8 @@
               </div>
             </div>
           </div>-->
-          <div class="col-md-6 d-flex align-items-stretch mt-4">
-            <div class="card" style='background-image: url("../assets/img/api.jpg");' data-aos="fade-up" data-aos-delay="200">
+          <div class="col-md-12 d-flex align-items-stretch mt-4">
+            <div class="card" style='background-image: url("../assets/img/api.jpg"); background-size: contain;' data-aos="fade-up" data-aos-delay="200">
               <div class="card-body">
                 <h5 class="card-title"><a href="">Rechnungs-Parsing-API</a></h5>
                 <p class="card-text">Extrahieren Sie strukturierte Informationen aus Rechnungsbildern mit fortschrittlichen Deep-Learning-Modellen.</p>
