--- a/de/index.html
+++ b/de/index.html
@@ -822,14 +822,12 @@
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
                 <img src="../assets/img/team/EbrahimAvatar.png" class="img-fluid" alt="">
-                <div class="social">
-                  <!--<a href="https://twitter.com/srreza"><i class="icofont-twitter"></i></a>-->
-                  <!--<a href="https://www.linkedin.com/in/reza-hoseini/"><i class="icofont-linkedin"></i></a>-->
-                  ebrahim@rekloud.de
+                <div class="social">                  
+                  christopher@rekloud.de
                 </div>
               </div>
               <div class="member-info" itemscope itemtype="http://schema.org/Person">
-                <span itemprop="name"><h4>Ebrahim</h4></span>
+                <span itemprop="name"><h4>Christopher</h4></span>
                 <span itemprop="jobTitle">Senior Data Scientist</span>
               </div>
             </div>
@@ -855,14 +853,12 @@
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
                 <img src="../assets/img/team/HosseinAvatar.png" class="img-fluid" alt="">
-                <div class="social">
-                  <!--<a href="https://twitter.com/mhrimaz"><i class="icofont-twitter"></i></a>-->
-                  <!--<a href="https://www.linkedin.com/in/mhrimaz/"><i class="icofont-linkedin"></i></a>-->
-                  hossein@rekloud.de
+                <div class="social">                  
+                  lars@rekloud.de
                 </div>
               </div>
               <div class="member-info" itemscope itemtype="http://schema.org/Person">
-                <span itemprop="name"><h4>Hossein</h4></span>
+                <span itemprop="name"><h4>Lars</h4></span>
                 <span itemprop="jobTitle">Software Engineer</span>
               </div>
             </div>
